# eew-quake-notify-system

./: .gitignore  AGENTS.md  Cargo.toml  PRIVACY.md  README.md  TERMS.md  config.toml.example  release-please-config.json
.agents/: README.md
.agents/skills/eew-quake-notify-system/: SKILL.md
.agents/skills/eew-quake-notify-system/agents/: openai.yaml
.agents/skills/rust-code-style/: SKILL.md
.agents/skills/rust-code-style/agents/: openai.yaml
.github/workflows/: ci.yml  release-please.yml
scripts/: install-task-scheduler.ps1  uninstall-task-scheduler.ps1
src/: app.rs  config.rs  event.rs  instance.rs  lib.rs  logging.rs  main.rs  message.rs  notify.rs  rules.rs  state.rs
src/dmdata/: client.rs  dto.rs  mod.rs  replay.rs  runtime.rs
src/tts/: mod.rs  voicevox.rs
