[package]
name = "eew-quake-notify-system"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
directories = "6.0.0"
flate2 = "1.1.5"
futures-util = "0.3.32"
notify-rust = "4.18.0"
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
] }
rodio = "0.22.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-webpki-roots",
] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "local-time"] }
url = "2.5.8"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
